# CodeSnippets

./: .gitignore  ButtonMainMenu.qml  CMakeLists.txt  CPlusPlusContentPage.qml  CodeDisplayPage.qml  CustomButton.qml  CustomListView.qml  CustomMouseAreaResize.qml  CustomRegularButton.qml  DialogExit.qml  DropShadowEffect.qml  ExplanationPage.qml  FileSystemView.qml  FileSystemViewItem.qml  FilesListView.qml  InitialPage.qml  IntegerModifiers2.txt  LICENSE  Main.qml  MainPage.qml  MyGroupbox.qml  MyMenu.qml  MyMenuBar.qml  MyTitleBar.qml  README.md  ScrollViewNotes  ScrollViewTopics.qml  SelectFolderPage.qml  Settings.qml  Theme.qml  TopicSection.qml  filesystemmodel.cpp  filesystemmodel.h  main.cpp  paths.json  qmldir  resources.qrc
Assets/Code/CPlusPlus/: Bitwise-PrintShiftAndLogicalBitwise.txt  Bitwise-maskBitwise.txt  FlowControl-IfElse.txt  FlowControl-SwitchCase.txt  FlowControl-TernaryOperator.txt  FlowControl-shortcircuitEvaluation.txt  Fractional Numbers.txt  LiteralAndConst-constExpression.txt  LogicalOperators.txt  Loops-BreakAndContinues.txt  Loops-CommaOperator.txt  Loops-DoWhile.txt  Loops-ExampleInfiniteLoop.txt  Loops-For.txt  Loops-IncreasingDecreasingLoops.txt  Loops-NestedLoops.txt  Loops-RangeBasedLoops.txt  Loops-While.txt  Number system.txt  NumericalLimits.txt  OutputFormatting.txt  OverflowAndUnderflow-General.txt  OverflowAndUnderflow-ImplicitExplicitConversion.txt  RelationalOperators.txt  VariablesAndDataTypes-Auto.txt  VariablesAndDataTypes-CompoundAssignmentOperators.txt  VariablesAndDataTypes-IntegerModifiers.txt  VariablesAndDataTypes-LogicalOperators.txt  VariablesAndDataTypes-Number system.txt  VariablesAndDataTypes-OutputFormatting.txt  VariablesAndDataTypes-RelationalOperators.txt  VariablesAndDataTypes-Varibable initialization.txt  VariablesAndDataTypes-constinit.txt  Varibable initialization.txt  template.txt
CodeSnippetsScripts/: FolderAndPathsUtils.py  FormattingTextToApp.py  Fundamentos.txt  ProcessText.py  QMLFileCreator.py  SobrecargaToProcess.txt  TestScripts.py  textToTransform.txt
CodeSnippetsScripts/BackUp/: Amigas.txt  BorrarAcentos.py  EstructurasDeDatos.txt  Funciones.txt  GestionDeLaMemoriaToProcess.txt  HerenciaYPolimorfismo.txt  POO.txt  PlantillasToProcess.txt  Semantics.txt  conceptsToProcess.txt  namespace.txt  textToTransform.txt  textoFaltante.txt
CodeSnippetsScripts/BackUp/Code_OLD/: Alcance de las Variables (Scope).txt  (+12 more)
CodeSnippetsScripts/Code/: Alias en Plantillas.txt  Callbacks.txt  Concepts en Funciones para Restringir el Tipo de Parametro.txt  Constructor de Movimiento.txt  Definicion de R-Value.txt  Estructura de un Programa.txt  Funciones Virtuales en Herencia.txt  Importancia de la Gestion de Memoria.txt  Iteradores de Entrada.txt  Namespaces Sin Nombre.txt  Operaciones Permitidas en el Ambito de Contenedores.txt  Plantillas Variadicas.txt  Plantillas de Clase Usando Concepts.txt  Problema del Diamante en la Herencia Multiple.txt  Rango y Tamano en Memoria de los Tipos de Datos Basicos.txt  Untitled.txt  Uso de Plantillas en Clases Derivadas.txt  Variables y Constantes.txt  consteval en Funciones.txt  stdcopy.txt  stdnthelement.txt  stdsetdifference.txt
CodeSnippetsScripts/Code_OLD/: Concepts Personalizados.txt  Concepts en Clases y Plantillas de Clases.txt  Estructura de un Programa.txt  Plantillas de Clase Base.txt  Uso de Concepts con Metodos de Clase.txt
CodeSnippetsScripts/QMLFiles/: ControlDeFlujo.qml  EstructurasDeDatos.qml  ExpresionesDeRango.qml  FuncionesComoEntidades.qml  Fundamentos.qml  MiemborsStaticYConst.qml  StdAlgorithms.qml
CodeSnippetsScripts/TestZone/: .txt  Fundamentos.txt
CodeSnippetsScripts/TextToProcess/: Amigas.txt  Control de flujo.txt  Expresiones de rango.txt  Funciones como entidades.txt  Fundamentos.txt  Iteradores.txt  Miembors static y const.txt  Std Algorithms.txt
Components/: CustomTextArea.qml
Modules/FileProcessor/: filelister.cpp  filelister.h  fileprocessor.cpp  fileprocessor.h  jsonhandler.cpp  jsonhandler.h  markdownprocessor.cpp  markdownprocessor.h
Modules/ListsOfModels/: Amigas.qml  Bitwise.qml  ControlFlowModels.qml  Corutinas.qml  DataTypesModel.qml  EstructurasDeDatos.qml  Fundamentos.qml  HerenciaYPolimorfismo.qml  LiteralConstants.qml  Loops.qml  ManejoMemoria.qml  Namespace.qml  OverFlow.qml  Plantillas.qml  PlantillasYGenericas.qml  Poo.qml  Semantics.qml  SobrecargaDeOperadores.qml
Modules/Notes/: MyGroupBoxComponent
Modules/Style/: Theme.qml
Modules/Utils/: FileReader.qml  pythonrunner.cpp  pythonrunner.h
(+536 files in other folders)
